# dala

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PRIVACY.md  TODO.md  keyboardshortcuts.md  main.py  package_extensions.sh  pyproject.toml  readme.md  server.py  sites.yaml  web_to_epub.py  web_to_epub_1.py
android/: android.md  dala_start.sh  dala_status.sh  dala_stop.sh  install_widgets.sh
dala/: cli.py  models.py  server.py  setup_browser.py
dala/core/: browser.py  discovery.py  dispatcher.py  extractor.py  forum_image_processor.py  image_budget.py  image_processor.py  profiles.py  server_jobs.py  session.py  translation.py  writer.py
dala/data/: sites.json  sites.yaml
dala/drivers/: base.py  forum.py  generic.py  hn.py  reddit.py  substack.py  wordpress.py  youtube.py
dala/utils/: formatting.py  llm.py
epub_downloader/: models.py
epub_downloader/core/: dispatcher.py  profiles.py  session.py  writer.py
epub_downloader/drivers/: forum.py  hn.py  wordpress.py
epub_downloader/utils/: llm.py
extension/: background.js  keyboard-shortcut.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
extension_chrome/: .amo-upload-uuid  .web-extension-id  background.js  chrome-shim.js  keyboard-shortcut.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
extension_chrome/web-ext-artifacts/: 79556425c64b4e2c9b57-2.3.1.xpi
firefox_extension/: .amo-upload-uuid  background.js  keyboard-shortcut.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js  shared-forum.js
firefox_extension/web-ext-artifacts/: 79556425c64b4e2c9b57-2.3.2.xpi  79556425c64b4e2c9b57-2.3.3.xpi  79556425c64b4e2c9b57-2.3.4.xpi  79556425c64b4e2c9b57-2.3.5.xpi  79556425c64b4e2c9b57-2.3.xpi
installers/: Install or Update Dala.bat  Install or Update Dala.command  Install or Update Dala.ps1  Install or Update Dala.sh  README.md
launchers/: Start Dala Server.bat  Start Dala Server.command  dala-server.desktop
old_extension/extension/: background.js  manifest.json  popup.css  popup.html
scripts/: install-dala.ps1  install-dala.sh
tests/: helpers.py  test_browser.py  test_chrome_extension.py  test_discovery.py  test_drivers.py  test_hn_integration.py  test_image_budget.py  test_server.py  test_server_saving.py  test_setup_browser.py  test_translation.py  test_units.py  test_writer.py
