[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dala"
version = "2.4.3"
description = "Web to ebook downloader"
readme = "readme.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "dala contributors" },
]
keywords = ["epub", "ebook", "ereader", "kobo", "web", "articles", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "requests>=2.30.0",
    "aiohttp[speedups]>=3.9.0",
    "beautifulsoup4>=4.11.0",
    "EbookLib>=0.18",
    "trafilatura>=1.6.0",
    "lxml[html_clean]>=4.9.0",
    "pygments>=2.14.0",
    "tqdm>=4.65.0",
    "Pillow>=9.0.0",
    "fastapi>=0.99.0",
    "uvicorn>=0.22.0",
    "youtube-transcript-api>=0.6.0",
    "python-dotenv>=1.0.0",
    "youtube-comment-downloader>=0.1.0",
    "pypdf>=5.9.0",
    "deep-translator>=1.11.4",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
config = [
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/anaxonda/dala"
Repository = "https://github.com/anaxonda/dala"
Issues = "https://github.com/anaxonda/dala/issues"

[project.scripts]
dala = "dala.cli:main"
dala-server = "dala.server:start"
dala-setup-browser = "dala.setup_browser:main"

[tool.hatch.build]
exclude = [
    "/.git",
    "/.venv",
    "/__pycache__",
    "/config/bpc",
    "/dist",
    "/exports",
    "/web-ext-artifacts",
    "*.epub",
    "*.pdf",
    "*.log",
    "server.log",
]

[tool.hatch.build.targets.wheel]
packages = ["dala"]

[tool.hatch.build.targets.sdist]
include = [
    "/dala",
    "/tests",
    "/installers",
    "/launchers",
    "/scripts",
    "/main.py",
    "/server.py",
    "/web_to_epub.py",
    "/sites.yaml",
    "/pyproject.toml",
    "/readme.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/PRIVACY.md",
]
exclude = [
    "/extension_chrome/.amo-upload-uuid",
    "/extension_chrome/.web-extension-id",
    "/firefox_extension/.web-extension-id",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "httpx>=0.28.1",
]
